--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,76 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/styles/theme.scss';
-@import '~codemirror/lib/codemirror';
+@import '~codemirror/theme/3024-day';
+@import '~codemirror/theme/3024-night';     
+@import '~codemirror/theme/abbott';
+@import '~codemirror/theme/abcdef';
+@import '~codemirror/theme/ambiance-mobile';
+@import '~codemirror/theme/ambiance';
+@import '~codemirror/theme/ayu-dark';       
+@import '~codemirror/theme/ayu-mirage';     
+@import '~codemirror/theme/base16-dark';    
+@import '~codemirror/theme/base16-light';   
+@import '~codemirror/theme/bespin';
+@import '~codemirror/theme/blackboard';
+@import '~codemirror/theme/cobalt';
+@import '~codemirror/theme/colorforth';
+@import '~codemirror/theme/darcula';
+@import '~codemirror/theme/dracula';
+@import '~codemirror/theme/duotone-dark';
+@import '~codemirror/theme/duotone-light';
+@import '~codemirror/theme/eclipse';
+@import '~codemirror/theme/elegant';
+@import '~codemirror/theme/erlang-dark';
+@import '~codemirror/theme/gruvbox-dark';
+@import '~codemirror/theme/hopscotch';
+@import '~codemirror/theme/icecoder';
+@import '~codemirror/theme/idea';
+@import '~codemirror/theme/isotope';
+@import '~codemirror/theme/juejin';
+@import '~codemirror/theme/lesser-dark';
+@import '~codemirror/theme/liquibyte';
+@import '~codemirror/theme/lucario';
+@import '~codemirror/theme/material-darker';
+@import '~codemirror/theme/material-ocean';
+@import '~codemirror/theme/material-palenight';
 @import '~codemirror/theme/material';
-@import '~codemirror/theme/tomorrow-night-bright';
-@import '~codemirror/theme/the-matrix';
-@import '~codemirror/theme/ssms';
-@import '~codemirror/theme/solarized';
-@import '~codemirror/theme/shadowfox';
+@import '~codemirror/theme/mbo';
+@import '~codemirror/theme/mdn-like';
+@import '~codemirror/theme/midnight';
+@import '~codemirror/theme/monokai';
+@import '~codemirror/theme/moxer';
+@import '~codemirror/theme/neat';
+@import '~codemirror/theme/neo';
+@import '~codemirror/theme/night';
+@import '~codemirror/theme/nord';
+@import '~codemirror/theme/oceanic-next';
+@import '~codemirror/theme/panda-syntax';
+@import '~codemirror/theme/paraiso-dark';
+@import '~codemirror/theme/paraiso-light';
+@import '~codemirror/theme/pastel-on-dark';
+@import '~codemirror/theme/railscasts';
+@import '~codemirror/theme/rubyblue';
 @import '~codemirror/theme/seti';
+@import '~codemirror/theme/shadowfox';
+@import '~codemirror/theme/solarized';
+@import '~codemirror/theme/ssms';
+@import '~codemirror/theme/the-matrix';
+@import '~codemirror/theme/tomorrow-night-bright';
 @import '~codemirror/theme/tomorrow-night-eighties';
-@import '~codemirror/theme/ttcn.css';
+@import '~codemirror/theme/ttcn';
 @import '~codemirror/theme/twilight';
 @import '~codemirror/theme/vibrant-ink';
 @import '~codemirror/theme/xq-dark';
 @import '~codemirror/theme/xq-light';
 @import '~codemirror/theme/yeti';
+@import '~codemirror/theme/yonce';
 @import '~codemirror/theme/zenburn';
-@import '~codemirror/theme/icecoder';
-@import '~codemirror/theme/isotope';
+
+
+@import '~codemirror/addon/search/matchesonscrollbar';
+
+// fonts 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #C6D2ED;}
+body { margin: 0; font-family: 'Roboto', sans-serif; background-color: #C6D2ED;}
