--- a/src/app/components/compiler/compiler.component.scss
+++ b/src/app/components/compiler/compiler.component.scss
@@ -1,48 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-.compilerWrapper{
-    padding: 30px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+.compilerWrapper {
+  padding: 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #0e1626;
+  .codeMirror {
     height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #0E1626;
-    .codeMirror{
-      height: 100%;
-    }
+  }
 }
-.compiler{
-    width: 60%;
+.compiler {
+  width: 60%;
 }
-.console{
-    margin: 10px;
-    color: #D6DEEB;
-    textarea{
-        width: 100%;
-        background-color: #1C2333;
-        color: white;
-        border-radius: 20px;
-        padding: 20px;
-    }
-    h2{
-      color: #D6DEEB;
-    }
-    
+.console {
+  margin: 10px;
+  color: #d6deeb;
+  textarea {
+    width: 100%;
+    background-color: #1c2333;
+    color: white;
+    border-radius: 20px;
+    padding: 20px;
+  }
+  h2 {
+    color: #d6deeb;
+  }
 }
-.editor-options
-{
-    display: flex;
-    justify-content: space-between;
+.editor-options {
+  display: flex;
+  justify-content: space-between;
 }
-
-
-
-
 
 $glass: rgba(255, 255, 255, 0.2);
 $glass-icon: rgba(255, 255, 255, 0.3);
 $gradient: linear-gradient(35deg, red, purple);
-$option: #0E1626;
-
+$option: #0e1626;
 
 /* <select> styles */
 select {
@@ -67,7 +60,7 @@ select {
   option {
     color: inherit;
     background-color: $option;
-    font-family: 'Roboto', sans-serif;;
+    font-family: "Roboto", sans-serif;
   }
   /* Remove focus outline */
   &:focus {
@@ -79,18 +72,39 @@ select {
   }
 }
 
-.run-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    background-color: green;
-    width: 6em;
-    color:#6CD97E;
-    border-radius: 10px;
-    margin-bottom: 10px;
+.run-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: green;
+  width: 6em;
+  color: #6cd97e;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
-::ng-deep .CodeMirror{
-  height:400px
-  }
+::ng-deep .CodeMirror {
+  height: 400px;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
