--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -6,12 +6,13 @@
     </div>
     <nav class="page-header__bottom">
       <ul id="navigation" class="navigation">
-        <li class="navigation__item">Home</li>
+        <li class="navigation__item" routerLink="home">Home</li>
         <li routerLink="code" class="navigation__item">Code</li>
-        <li class="navigation__item">Contribute</li>
+        <li routerLink="contribute" class="navigation__item">Contribute</li>
         <li class="navigation__item">Approve</li>
-        <li class="navigation__item signIn">SignIn</li>
-        <li class="navigation__item signUp">SignUp</li>
+        <li class="navigation__item">Profile</li>
+        <li class="navigation__item signIn">SignOut</li>
+        <!-- <li class="navigation__item signUp">SignUp</li> -->
       </ul>
     </nav>
   </header>
