--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,40 @@
 <div class="container p-5">
-    <!-- <div class="row">
-        <mat-form-field appearance="fill">
-            <mat-label>Difficulty</mat-label>
-            <select matNativeControl required>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="mercedes">Mercedes</option>
-              <option value="audi">Audi</option>
-            </select>
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>Status</mat-label>
-            <select matNativeControl required>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="mercedes">Mercedes</option>
-              <option value="audi">Audi</option>
-            </select>
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>Tags</mat-label>
-            <select matNativeControl required>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="mercedes">Mercedes</option>
-              <option value="audi">Audi</option>
-            </select>
-          </mat-form-field>
-    </div> -->
+  <table mat-table [dataSource]="questions" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <!-- <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container> -->
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> <a routerLink="question">{{element.name}}</a> </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <!-- <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element">  <i class="fa fa-check-circle" style="color:green"></i>   </td>
+    </ng-container> -->
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="difficulty">
+      <th mat-header-cell *matHeaderCellDef> Difficulty </th>
+      <td mat-cell *matCellDef="let element"> {{element.difficulty}} </td>
+    </ng-container>
+
+    <!-- Acceptance Column
+    <ng-container matColumnDef="acceptance">
+      <th mat-header-cell *matHeaderCellDef> Acceptance </th>
+      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    </ng-container> -->
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
