--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,8 +1,3 @@
-mat-form-field {
-    width: 200px;
-  }
-
-  .problems{
-      display: flex;
-      flex-direction: column;
+table {
+    width: 100%;
   }
