--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> <a routerLink="question">{{element.name}}</a> </td>
+      <td mat-cell *matCellDef="let element" (click)="openPreview(element._id)"> <a>{{element.name}}</a> </td>
     </ng-container>
   
     <!-- Weight Column -->
