feature: Login and authentication flow completed

--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -6,7 +6,7 @@
     -webkit-user-select: none;
     background-color: #0E1525;
     position: fixed;
-    top: 0;
+    top: 0px;
     height: 60px;
     color: #fff;
     width: 100%;
