--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <router-outlet>
-    <app-nav-bar></app-nav-bar>
-    <div class="spacer"></div>
+    <mat-progress-bar mode="query" *ngIf="loading"></mat-progress-bar>
 </router-outlet>
