Replaced Rich text editor for question field in question , added profile component

--- a/src/app/components/home/question-preview/test-case-results/test-case-results.component.html
+++ b/src/app/components/home/question-preview/test-case-results/test-case-results.component.html
@@ -9,7 +9,7 @@
         <div class="col-3 center-flex">Input</div>
         <div class="col-3 center-flex">Status</div>
         <div class="col-3 center-flex">Time(sec)</div>
-        <div class="col-3 center-flex">Memory(KiB</div>
+        <div class="col-3 center-flex">Memory(KiB)</div>
     </div>
     <div class="test-cases row" *ngFor="let item of testCaseResults">
         <div class="col-3 center-flex">Input #{{item.postion}}</div>
