--- a/src/app/components/contribute/contribute.component.html
+++ b/src/app/components/contribute/contribute.component.html
@@ -7,11 +7,12 @@
             </mat-form-field>
 
         </div>
-        <div class="row">
-            <mat-form-field appearance="fill" >
+        <div class="row m-2" style="background-color:white">
+            <!-- <mat-form-field appearance="fill" >
                 <mat-label>Description</mat-label>
                 <textarea matInput rows="15" [(ngModel)]="question"></textarea>
-            </mat-form-field>
+            </mat-form-field> -->
+            <angular-editor [placeholder]="'Write your question here...'" [(ngModel)]="question"  [config]="config"></angular-editor>
         </div>
         <div class="row">
             <mat-form-field appearance="fill" >
