--- a/src/app/components/home/question-preview/question-preview.component.html
+++ b/src/app/components/home/question-preview/question-preview.component.html
@@ -1,10 +1,10 @@
 <div style="width: 100%; height: 100%;">
     <as-split direction="horizontal">
-      <as-split-area [size]="40" useTransition="true">
-        <div class="questionWrapper p-2">
+      <as-split-area [size]="40" useTransition="true" class="bg-light">
+        <div class="questionWrapper p-4">
             <h2>{{question.name}}</h2>
-            <p>
-                {{question.question}}
+            <p [innerHTML]="question.question">
+
             </p>
         </div>
       </as-split-area>
