--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
       <li routerLink="/home/code" class="navigation__item">Code</li>
       <li routerLink="/home/contribute" class="navigation__item">Contribute</li>
       <li class="navigation__item" *ngIf="user?.userType == 'ADMIN'">Approve</li>
-      <li class="navigation__item">Profile</li>
+      <li routerLink="/home/profile" class="navigation__item">Profile</li>
       <li class="navigation__item signIn" (click)="logOut()">SignOut</li>
       <!-- <li class="navigation__item signUp">SignUp</li> -->
     </ul>
