Feat: added github actions workflow

--- a/src/app/auth-management/auth-management.component.html
+++ b/src/app/auth-management/auth-management.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar mode="query"></mat-progress-bar>
 <div class="loader">
     <img src="/assets/loading.webp" alt="" srcset="">
-    <h1><strong>Loading...</strong></h1>
+    <h1><strong>Loading components...</strong></h1>
 </div>
